--- a/views/styles/main.css
+++ b/views/styles/main.css
@@ -16,6 +16,10 @@
   background-color: var(--color-primary);
 }
 
+.bg-prime {
+  background-color: var(--color-primary);
+}
+
 .txt-danger {
   color: var(--color-danger);
 }
@@ -103,23 +107,32 @@ button[disabled="disabled"] {
   opacity: 1;
 }
 
-.fileUploadGrid #pauseBtn {
+.w2ui-grid[name="fileUploadGrid"] #pauseBtn {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
 }
 
-.fileUploadGrid #continueBtn {
+.w2ui-grid[name="fileUploadGrid"] #continueBtn {
   display: none;
 }
 
-.fileUploadGrid.paused #pauseBtn {
+.w2ui-grid[name="fileUploadGrid"].paused #pauseBtn {
   display: none;
 }
 
-.fileUploadGrid.paused #continueBtn {
+.w2ui-grid[name="fileUploadGrid"].paused #continueBtn {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+}
+
+ul.dash-menu__items li {
+  margin-bottom: 5px;
+  padding: 5px 10px;
+}
+
+ul.dash-menu__items li.current, ul.dash-menu__items li:hover {
+  background-color: #f5f5f5;
 }
 /*# sourceMappingURL=main.css.map */
