authentication: login, signup, logout, authorization

--- a/views/index.html
+++ b/views/index.html
@@ -70,7 +70,7 @@
         <div class="py-16 d-flex flex-column align-items-center justify-content-center"> 
           <div class="circle-icon fs-32" style="background-color:#f5f5f5"><i class="ri-user-3-line"></i></div>
           <span class="mt-6"> Văn Hữu </span> 
-          <a href="" class="fs-14" style=""> Logout </a> 
+          <a href="/logout" class="fs-14" style=""> Logout </a> 
         </div>  
       </div>
       `
